# prototool

./: .gitignore  Makefile
etc/style/uber2/: README.md
etc/style/uber2/uber/bar/v1/: bar.proto
etc/style/uber2/uber/foo/v1/: foo.proto
etc/style/uber2/uber/trip/v1/: trip.proto
etc/style/uber2/uber/user/v1/: user.proto
example/proto/: WORKSPACE  prototool.yaml
example/proto/uber/bar/v1/: BUILD.bazel
example/proto/uber/foo/v1/: BUILD.bazel
internal/bazel/: BUILD.bazel  bazel.go  bazel_file_set.go  file_set.go  generator.go  printer.go  vars.go
internal/cmd/: cmd.go  cmd_test.go  templates.go
internal/exec/: BUILD.bazel  exec.go  runner.go
internal/file/: file.go  file_test.go  proto_set_provider_test.go
internal/settings/: config_provider.go  settings.go
protobuf-bug/: Makefile  WORKSPACE
protobuf-bug/foo/: BUILD.bazel  foo.proto
